Add note about renaming the library from Groupie to GroupieX & update all references to match

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Groupie</string>
+    <string name="app_name">GroupieX</string>
     <string name="expanding_group">Expanding group</string>
     <string name="carousel">Carousel</string>
     <string name="vertical_columns">Vertical columns</string>
